--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -10,11 +10,12 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    line-height: normal;
+    
     &_logo {
       margin-right: var(--space-xs);
+      height: 16px;
+      position: relative;
+      top: 1px;
     }
-  }
-  &_leftSide:first-child {
   }
 }
