--- a/src/Components/Grid/Grid.scss
+++ b/src/Components/Grid/Grid.scss
@@ -17,6 +17,8 @@
     grid-template-columns: repeat(4, 1fr);
   }
   & > div {
-    border: 1px solid #ff00d0
+    // background-color: var(--color-bg-secondary);
+    border: 1px solid var(--color-bg-border);
+    border-radius: 2px;
   }
 }
