--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -10,12 +10,17 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    
+
     &_logo {
       margin-right: var(--space-xs);
       height: 16px;
       position: relative;
       top: 1px;
     }
+  }
+  &_rightSide {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   }
 }
