--- a/src/Components/SidebarSettings/SidebarSettings.scss
+++ b/src/Components/SidebarSettings/SidebarSettings.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
+    z-index: 1;
   }
   &_mainHeading {
     display: flex;
