--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -4,8 +4,7 @@
   align-items: center;
   border-bottom: 1px solid var(--color-bg-border);
   padding: var(--space-xs) var(--space-l);
-  // box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  margin-bottom: var(--space-l);
+  margin-bottom: var(--space-s);
   &_leftSide {
     display: flex;
     flex-direction: row;
