--- a/src/Components/ColumnContent/ColumnContent.scss
+++ b/src/Components/ColumnContent/ColumnContent.scss
@@ -8,6 +8,11 @@
     & > div.Select {
       margin-right: var(--space-m);
     }
+    & > div.Badge {
+      min-width: 32px;
+      text-align: center;
+      display: block;
+    }
   }
   &_content {
     padding: var(--space-s);
