Add condition for screens < 1000px

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,11 @@
+.placeholder {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
 .App {
   padding: 0 var(--space-l);
 }
