Add localStorage support

--- a/src/Components/SidebarSettings/SidebarSettings.scss
+++ b/src/Components/SidebarSettings/SidebarSettings.scss
@@ -24,4 +24,9 @@
   &_ctaButton {
     margin-top: var(--space-m);
   }
+  &_snackBar {
+    & > .SnackBar-Item {
+      margin-bottom: 0px;
+    }
+  }
 }
